2006-03-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/xml_stream.erl: Added catching of gen_fsm:send_event errors

	* src/ejabberd_s2s_out.erl: Better support for multiple SRV
	records (thanks to Sergei Golovan)

	* src/mod_muc/mod_muc_log.erl: Support for chatroom logging
	(thanks to Badlop)
	* src/mod_muc/mod_muc_room.erl: Likewise
	* src/mod_muc/Makefile.in: Likewise
	* src/mod_muc/Makefile.win32: Likewise

2006-03-11  Alexey Shchepin  <alexey@sevcom.net>

	* src/gen_iq_handler.erl: Added support for {queues, N} IQ handler
	type

2006-03-06  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Bugfix

2006-03-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Bugfix

	* src/ejabberd_auth_odbc.erl: Bugfix

2006-03-04  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_logger_h.erl: reopen-log function now rename the log
	file if it has not been already renamed by a logrotate process. This
	change allow ejabberd administrators to rotate log files on Windows
        (EJAB-52).

2006-02-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Added a interface for node
	updating
	* src/ejabberd_update.erl: Added function update_info/0

2006-02-25  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)
	* src/msgs/uk.msg: Likewise

	* contrib/extract_translations/extract_translations.erl: Minor
	update (thanks to Sergei Golovan)

	* src/ejabberd_zlib/Makefile.win32: Zlib support for Windows build
	(thanks to Sergei Golovan)
	* src/Makefile.win32: Likewise
	* src/configure.erl: Likewise

2006-02-20  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_ctl.erl: Added API for virtual host specific
	commands, removed registered-users command
	* src/ejabberd_auth.erl: Added processing of registered-users
	command
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_ldap.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise